--- a/style.css
+++ b/style.css
@@ -293,7 +293,7 @@ html {
 #INFO table {
 	font-family: monospace;
 	width: 100%;
-	font-size: 1em;
+	font-size: 1.1em;
 }
 
 #INFO table td {
@@ -349,30 +349,30 @@ html {
 }
 
 .btn-blue {
-	background-color: rgba(137, 188, 239, 0.2);
+	background-color: rgba(63, 172, 234, 0.2);
 }
 
 .btn-blue:hover {
-	background-color: rgba(137, 188, 239, 0.4);
+	background-color: rgba(63, 172, 234, 0.4);
 }
 
 .btn-blue:focus {
 	box-shadow: 0px 5px 5px -2px rgba(217, 217, 217, 1);
-	background-color: rgba(137, 188, 239, 0.5);
+	background-color: rgba(63, 172, 234, 0.5);
 	outline: none;
 }
 
-.btn-green {
-	background-color: rgba(138, 242, 162, 0.2);
+.btn-yellow {
+	background-color: rgba(245, 220, 0, 0.2);
 }
 
-.btn-green:hover {
-	background-color: rgba(138, 242, 162, 0.4);
+.btn-yellow:hover {
+	background-color: rgba(245, 220, 0, 0.4);
 }
 
-.btn-green:focus {
+.btn-yellow:focus {
 	box-shadow: 0px 5px 5px -2px rgba(217, 217, 217, 1);
-	background-color: rgba(138, 242, 162, 0.5);
+	background-color: rgba(245, 220, 0, 0.5);
 	outline: none;
 }
 
