--- a/style.css
+++ b/style.css
@@ -293,7 +293,7 @@ html {
 #INFO table {
 	font-family: monospace;
 	width: 100%;
-	font-size: 1.1em;
+	font-size: 1.05em;
 }
 
 #INFO table td {
@@ -362,17 +362,17 @@ html {
 	outline: none;
 }
 
-.btn-yellow {
-	background-color: rgba(245, 220, 0, 0.2);
+.btn-red {
+	background-color: rgba(238, 34, 34, 0.2);
 }
 
-.btn-yellow:hover {
-	background-color: rgba(245, 220, 0, 0.4);
+.btn-red:hover {
+	background-color: rgba(238, 34, 34, 0.4);
 }
 
-.btn-yellow:focus {
+.btn-red:focus {
 	box-shadow: 0px 5px 5px -2px rgba(217, 217, 217, 1);
-	background-color: rgba(245, 220, 0, 0.5);
+	background-color: rgba(238, 34, 34, 0.5);
 	outline: none;
 }
 
