--- a/style.css
+++ b/style.css
@@ -346,6 +346,7 @@ html {
 	transition: 0.25s;
 	box-shadow: 0px 5px 5px -2px rgba(217, 217, 217, 1);
 	background-color: rgba(137, 188, 239, 0.3);
+	text-decoration: none;
 }
 
 .btn-blue {
